working on creating user details list

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -1,18 +1,20 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 
 <ul *ngFor="let det of details">
   <li>{{ det.name }}</li>
   <li>{{ det.age }}</li>
   <li>{{ det.sex }}</li>
-</ul>
-
+</ul> -->
+<!-- 
 <button class="btn btn-success" (click)="hello(56)" *ngIf="isShown">
   Hello
 </button>
 {{ age }}
 
 <input type="text" (keyup.enter)="clickMe($event)" />
-{{ input }}
+{{ input }} -->
 
-<app-new></app-new>
-<app-binding></app-binding>
+<!-- <app-new></app-new> -->
+<!-- <app-binding></app-binding> -->
+<!-- <app-service-comp></app-service-comp> -->
+<app-todo-list></app-todo-list>
