ngstyle and ngform ngstyle

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -17,4 +17,5 @@
 <!-- <app-new></app-new> -->
 <!-- <app-binding></app-binding> -->
 <!-- <app-service-comp></app-service-comp> -->
-<app-todo-list></app-todo-list>
+<!-- <app-todo-list></app-todo-list> -->
+<app-form></app-form>
