--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -18,4 +18,6 @@
 <!-- <app-binding></app-binding> -->
 <!-- <app-service-comp></app-service-comp> -->
 <!-- <app-todo-list></app-todo-list> -->
-<app-form></app-form>
+<!-- <app-form></app-form> -->
+<!-- <app-reactive-form></app-reactive-form> -->
+<app-parent></app-parent>
